* 2014-10-02 - tobias.friedrich@open-xchange.com

 - Fix for bug 34283: Introduced a hard limit when marshalling the XML elements of a WebDAV response with a depth >= 1 recursively

* 2014-09-26 - thorben.betten@open-xchange.com

 - Fix for bug 34465: Fixed update for POP3 mail accounts

* 2014-09-19 - tobias.friedrich@open-xchange.com

 - Fix for bug 34499: Don't fail on invalid e-mail addresses, instead add a warning to the import result 

* 2014-09-18 - thorben.betten@open-xchange.com

 - Fix for bug 34071: Properly build up namespace section in IMAP folder tree

* 2014-09-11 - jan.bauerdick@open-xchange.com

 - Fix for bug 34281: Facebook made access to permissions more restrictive since April 30th 2014.
                      Removed these permissions, because they were unused.

* 2014-09-11 - martin.herfurth@open-xchange.com

 - Fix for bug 34361: Case insensitive check for organizer.

* 2014-09-10 - tobias.friedrich@open-xchange.com

 - Fix for bug 34355: Use secured SAXBuilder in the replay WebDAV request

* 2014-09-02 - thorben.betten@open-xchange.com

 - Fix for bug 33967: Avoid 102 Processing interim responses for requests executed by USM component

* 2014-09-01 - jan.bauerdick@open-xchange.com

 - Fix for bug 33354: Added display message for invalid characters in folder name

* 2014-08-25 - tobias.friedrich@open-xchange.com

 - Fix for bug 33748: Don't attempt to read more bytes from the buffer than available 

* 2014-08-14 - thorben.betten@open-xchange.com

 - Fix for bug 34035: Properly acquire message's source

* 2014-08-14 - martin.herfurth@open-xchange.com

 - Fix for bug 34041: Ignore additional elements in autoconfig xml.

* 2014-08-13 - martin.herfurth@open-xchange.com

- Fix for bug 34023: Default display message for category user input.

* 2014-08-08 - martin.herfurth@open-xchange.com

 - Fix for bug 30599: Ical export stumbles over bad reccurring appointment.

* 2014-08-08 - thorben.betten@open-xchange.com
